tests/snapshots/snapshot_tests__action_menu.snap
---
source: tests/snapshot_tests.rs
description: ContactDetail → press Enter on field
expression: output
---
                                Abigale Schroeder

┌ Perspective ─────────────────────────────────────────────────────────────────┐
│ [x] Their Info                                                               │
│     What they share with me                                                  │
│ [ ] My Info for Them                                                         │
│     What I share with them                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Abigale Schroeder ─────────────┌ Actions [Es┐────────────────────────────────┐
│                                │  Call      │                                │
│  Initials                      │  Send SMS  │                                │
│  AS                            │  Copy      │                                │
└────────────────────────────────└────────────┘────────────────────────────────┘
┌ Fields ──────────────────────────────────────────────────────────────────────┐
│Type       Label           Value                                              │
│                                                                              │
│Phone      Mobile          +1-200-100-1000                                    │
│Email      Email           abigale.schroeder@example.com                      │
│Address    Address         100 Main St, Springfield                           │
└──────────────────────────────────────────────────────────────────────────────┘


[Space] select  [e] Edit  [Esc] Back  [?] help  [Esc] back  [q] quit
   1 Exchange   │  2 ★ MyInfo   │  3 Contacts   │  4 Settings   │    5 Help
