tests/snapshots/snapshot_tests__action_menu_edited.snap
---
source: tests/snapshot_tests.rs
expression: output
---
                             * Abigale Schroeder *

┌ Perspective ─────────────────────────────────────────────────────────────────┐
│ [x] Their Info                                                               │
│     What they share with me                                                  │
│ [ ] My Info for Them                                                         │
│     What I share with them                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Abigale Schroeder ───────────────────────────────────┌──── Actions [Esc] ────┐
│                                                      │  Call                 │                               
│  Initials                  Groups:                   │  Send SMS             │                             
│  AS                         [ Friends ]              │  Copy                 │                               
└──────────────────────────────────────────────────────└───────────────────────┘
┌ Fields ──────────────────────────────────────────────────────────────────────┐
│Type       Label           Value                                              │
│                                                                              │
│Phone      Mobile          +1-200-100-1000                                    │
│Email      Email           abigale.schroeder@example.com                      │
│Address    Address         100 Main St, Springfield                           │
└──────────────────────────────────────────────────────────────────────────────┘


    [Space] select  [e] Edit  [Esc] Back  [?] help  [Esc] back  [q] quit
  1 Exchange  │ 2 ★ MyInfo  │ 3 Contacts  │ 4 Settings │  5 Help  │  [q] Quit
