tests/snapshots/snapshot_tests__add_field_dialog.snap
---
source: tests/snapshot_tests.rs
description: "MyInfo → press 'a' (Add Entry)"
expression: output
---
                               Add Entry to MyInfo
                                  Select a type

┌──────────────────────────────────────────────────────────────────────────────┐
│ ▸ • Phone                                                                    │
│   • Email                                                                    │
│   • Website                                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
Value
┌ ⌨ type here ─────────────────────────────────────────────────────────────────┐
│Any custom info                                                               │
└──────────────────────────────────────────────────────────────────────────────┘

Display Name (optional)
┌ ⌨ type here ─────────────────────────────────────────────────────────────────┐
│e.g. Work, Personal, Mobile                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
Comment (your eyes only, optional)
┌ ⌨ type here ─────────────────────────────────────────────────────────────────┐
│Only visible to you                                                           │
└──────────────────────────────────────────────────────────────────────────────┘

[EDIT]   [Enter] Save  [Esc] Cancel  [?] help  [Esc] back  [q] quit
   1 Exchange   │  2 ★ MyInfo   │  3 Contacts   │  4 Settings   │    5 Help
