tests/snapshots/snapshot_tests__backup_import.snap
---
source: tests/snapshot_tests.rs
assertion_line: 423
expression: output
---
Backup & Recovery

────────────────────────────────────────────────────────────────────────────────
                                Backup & Recovery

┌ [B] Protect your data ───────────────────────────────────────────────────────┐
│                                                                              │
│  Backup                                                                      │
│  Create an encrypted backup of your identity and contacts.                   │
└──────────────────────────────────────────────────────────────────────────────┘










                  [Enter] Create Backup  [Enter] Restore Backup

[E] Create Backup  [E] Restore Backup  [␛] back  [q] quit
    Exchange    │   Contacts    │     Home      │  ★ Settings   │     Help
