tests/snapshots/snapshot_tests__backup_menu.snap
---
source: tests/snapshot_tests.rs
expression: output
---
Backup & Restore

────────────────────────────────────────────────────────────────────────────────
┌Backup & Restore──────────────────────────────────────────────────────────────┐
│Back up your identity to transfer to another device or restore after reinstall│
│Your backup is encrypted with a password you choose.                          │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│[e] Export Backup - Create an encrypted backup                                │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│[i] Import Backup - Restore from a backup                                     │
└──────────────────────────────────────────────────────────────────────────────┘







────────────────────────────────────────────────────────────────────────────────
[e]xport  [i]mport  [esc] back  [?]help
