tests/snapshots/snapshot_tests__contact_duplicates_edited.snap
---
source: tests/snapshot_tests.rs
expression: output
---
                            * Duplicate Detection *

No duplicate contacts detected.



















[?] help  [Esc] back  [q] quit
  1 Exchange  │ 2 ★ MyInfo  │ 3 Contacts  │ 4 Settings │  5 Help  │  [q] Quit
